--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@
   --orange: orange;
 }
 header {
-  background-color: forestgreen;
+  background-color: #2c3e50;
+}
+.text-white {
+  color: white;
 }
 
 img {
@@ -28,7 +31,7 @@ img {
 }
 
 #about {
-  background-color: var(--orange);
+  background-color: #1abc9c;
 }
 
 #contact {
@@ -51,9 +54,9 @@ img {
   margin: 0 auto;
 }
 
-#btn-download {
+button.btn-download {
   border-color: white;
-  background-color: var(--orange);
+  background-color: #1abc9c;
 }
 
 #contact-box {
